# assets/swagger.json
@@ -5719,10 +5719,6 @@
             "$ref": "#/definitions/v1GroupKind"
           }
         },
-        "defaultServiceAccountName": {
-          "type": "string",
-          "title": "DefaultServiceAccount to be used for impersonation during the sync operation if none specified in Application"
-        },
         "description": {
           "type": "string",
           "title": "Description contains optional project description"
@@ -5855,6 +5851,10 @@
         "server": {
           "description": "Server specifies the URL of the target cluster's Kubernetes control plane API. This must be set if Name is not set.",
           "type": "string"
+        },
+        "serviceAccountName": {
+          "type": "string",
+          "title": "ServiceAccountName to be used for impersonation during the sync operation"
         }
       }
     },
@@ -6481,10 +6481,6 @@
           "description": "RevisionHistoryLimit limits the number of items kept in the application's revision history, which is used for informational purposes as well as for rollbacks to previous versions.\nThis should only be changed in exceptional circumstances.\nSetting to zero will store no history. This will reduce storage used.\nIncreasing will increase the space used to store the history, so we do not recommend increasing it.\nDefault is 10.",
           "type": "string",
           "format": "int64"
-        },
-        "serviceAccountName": {
-          "type": "string",
-          "title": "ServiceAccountName to be used for impersonation during the sync operation"
         },
         "source": {
           "$ref": "#/definitions/v1alpha1ApplicationSource"
